[metadata]
name = lfxai
description = A framework to explain the latent representations of unsupervised black-box models with the help of usual feature importance and example-based methods.
author = Jonathan Crabbé
author_email = jc2133@cam.ac.uk
license = MIT
license_files = LICENSE
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8
# Add here related links, for example:
# Change if running only on Windows, Mac or Linux (comma-separated)
platforms = any

# Add here all kinds of additional classifiers as defined under
# https://pypi.org/classifiers/
classifiers =
    Programming Language :: Python :: 3
    Topic :: Scientific/Engineering :: Artificial Intelligence
    Intended Audience :: Healthcare Industry
    Operating System :: OS Independent

[options]
zip_safe = False
packages = find_namespace:
include_package_data = True
package_dir =
    =src

python_requires = >=3.6

install_requires =
    torch
    torchvision
    captum
    hydra-core
    numpy
    pandas
    scikit-image
    scikit-learn
    scipy
    seaborn
    tabulate
    tqdm
    wget
    matplotlib
    importlib-metadata; python_version<"3.8"


[options.packages.find]
where = src
exclude =
    tests

[options.extras_require]
# Add here test requirements (semicolon/line-separated)
testing =
    setuptools
    pytest
    pytest-cov
    jupyter
    notebook
    pre-commit

[tool:pytest]
addopts =
    --verbose
norecursedirs =
    dist
    build
    .tox
testpaths = tests
# Use pytest markers to select/deselect specific tests
markers =
     slow: mark tests as slow (deselect with '-m "not slow"')

[devpi:upload]
# Options for the devpi: PyPI server and packaging tool
# VCS export must be deactivated since we are using setuptools-scm
no_vcs = 1
formats = bdist_wheel

[flake8]
# Some sane defaults for the code style checker flake8
max_line_length = 88
extend_ignore = E203, W503
# ^  Black-compatible
#    E203 and W503 have edge cases handled by black
exclude =
    .tox
    build
    dist
    .eggs
    docs/conf.py

[pyscaffold]
# PyScaffold's parameters when the project was created.
# This will be used when updating. Do not change!
version = 4.1.1
package = lfxai
extensions =
    pre_commit

[build_sphinx]
project = 'lfxai'
version = 1.2
release = 1.2.0
source-dir = 'docs'
